<resources>
    <string name="app_name">DressApp</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_camera">Camera</string>
    <string name="title_discover">Discover</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_bottom">bottom</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">sohan</string>
    <string name="desc">description</string>
    <string name="privacy_and_setings">Privacy and Setings</string>
    <string name="forgot_password_get_help_signing_in">Forgot Password? Get help signing in.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="action_settings">Settings</string>
    <string name="preview_description">Image and Video preview will appear here</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_record_video">Record Video</string>


    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>


    <string name="permission_request">This app needs permission for camera and audio recording.</string>

    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="message_need_permission">Need Permissions</string>

    <string name="message_permission">This app needs permission to use this feature. You can grant them in app settings.</string>

    <string name="title_go_to_setting">GOTO SETTINGS</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="play_stop">Play or Stop</string>
    <string name="friends">Friends</string>
    <string name="facebook_app_id">2649769705344729</string>
    <string name="fb_login_protocol_scheme">fb2649769705344729</string>
    <string name="permission_rationale">These permissions are mandatory for the application. Please allow access.</string>


</resources>


