<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@mipmap/chat_icon"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@mipmap/camera"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@mipmap/discover"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/profile_bottom"
        android:title="@string/title_profile" />

</menu>
