<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dressapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.dressapplication.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.dressapplication.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.dressapplication.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dressapplication.ui.myProfile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/cameraScreenFragment"
        android:name="com.dressapplication.ui.camera.CameraScreenFragment"
        android:label="fragment_camera_screen"
        tools:layout="@layout/fragment_camera_screen" />
    <fragment
        android:id="@+id/comment_F"
        android:name="com.dressapplication.change.Comment_F"
        android:label="fragment_comment_"
        tools:layout="@layout/fragment_comment_" />


</navigation>
